<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayEdificiosActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_lista_edificios" />

    <Spinner
        android:id="@+id/listaEdificios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/btnIndicaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verMapa"
        android:onClick="openMapaEdificio"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_lista_aulas" />
      
   	<ListView
         android:id="@+id/classroomList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>

</LinearLayout>